# Embark

./: .gitignore  ACHIEVEMENTS_IMPLEMENTATION_SUMMARY.md  BACKEND_COMPLETE.md  DATABASE_CLEANUP_INSTRUCTIONS.md  DATABASE_UPDATE_REQUIRED.md  DEV_PAGE_SETUP.md  DEV_TEST_PAGE_COMPLETE.md  ELEMENTAL_ITEMS_SETUP.md  HOMEPAGE_REDESIGN_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ITEMS_CONTEXT_IMPLEMENTATION.md  Procfile  QUEST_ACHIEVEMENTS_IMPLEMENTATION.md  QUEST_HELPER_SETUP.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RENAMING_COMPLETE.md  UNIQUE_ITEMS_QUESTS_IMPLEMENTATION.md  item-image-prompts-elemental.md  item-image-prompts-mythology.md  item-image-prompts.md  package.json  railway.toml  vercel.json
embark-backend/: DEPLOYMENT.md  ENV_SETUP_GUIDE.md  FRONTEND_SETUP.md  README.md  SETUP_INSTRUCTIONS.md  dependencies.py  main.py  pyproject.toml  requirements.txt  test_api.sh
embark-backend/config/: __init__.py  constants.py  settings.py
embark-backend/database/: QUEST_ADDITIONS_SUMMARY.md  SEEDING_GUIDE.md  add_18_more_items.sql  add_18_new_items.sql  add_36_elemental_items.sql  add_lifetime_glory.sql  add_quests_for_new_items.sql  check_duplicates.sql  cleanup_duplicates.sql  enemy-image-prompts.md  migration_add_quest_enemies.sql  migration_topic_quests.sql  migration_unique_constraints.sql  reset_database.sql  schema.sql  seed_data.sql  seed_data_enhanced.sql  seed_topic_quests.sql  supabase_client.py  update_6_star_prices.sql  update_economy_system.sql  update_enemy_names_to_lineage.sql  update_item_prices.sql
embark-backend/models/: item.py  (+3 more)
(+173 files in other folders)
