[project]
name = "embark-backend"
version = "0.1.0"
description = "Embark MVP Backend - Life Gamification API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "supabase>=2.9.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
